# useful-youngkk

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: crawl.yml  reminder.yml  weekly-summary.yml
.kiro/specs/seoul-youth-housing-telegram-bot/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: target-audience.md  task-management.md
src/: cli.py  config.py  main.py
src/ai/: __init__.py  gemini_client.py
src/calendar/: __init__.py  notion_client.py
src/crawler/: __init__.py  applyhome_crawler.py  base.py  lh_crawler.py  myhome_crawler.py  parser.py  sh_crawler.py
src/db/: __init__.py  models.py  repository.py
src/notifier/: __init__.py  admin.py  formatter.py  telegram.py  weekly_summary.py
src/scheduler/: __init__.py  jobs.py
tests/: test_admin.py  test_calendar.py  test_config.py  test_crawler.py  test_db.py  test_notifier.py  test_scheduler.py
