[project]
name = "seoul-youth-housing-bot"
version = "0.1.0"
description = "서울 청년 주거 정보 텔레그램 채널 봇"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "python-telegram-bot>=21.3",
    "notion-client>=2.2.1",
    "sqlalchemy>=2.0.30",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
